Sun Jul 20 03:55:49 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* fluids.c (next_fluid_num): don't do
	SCM_THREAD_CRITICAL_SECTION_START/END unless USE_THREADS is defined.

	* ports.h: prototypes too.
	* ports.c (scm_mode_bits, scm_port_mode): moved from fports.c.

	* fports.h: prototype too.
	* fports.c (scm_evict_ports): moved from ioext.c.

Sat Jul 19 04:56:52 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* ports.c (scm_close_port): return a boolean instead of unspecified.
	throw an error if an error other than EBADF occurs.

	* filesys.h: scm_close prototype.
	* filesys.c (scm_close): new procedure, can close file descriptors
	and ports (scsh compatible).

	* ports.c (scm_flush_all_ports): SCM_PROC incorrectly allowed an
	optional argument.

Fri Jul 18 11:19:53 1997  Marius Vollmer  <mvo@zagadka.ping.de>

	* fluids.c, fluid.h: New files.
	* Makefile.am (libguile_la_SOURCES): Added "fluids.c".
  	(modinclude_HEADERS): Added "fluids.h"
	
	* init.c: Include "fluids.h".  (scm_boot_guile_1): Added call to
 	scm_init_fluids to initialize the fluid machine.
  	(scm_start_stack): Initialize the fluids of the first root with
 	scm_make_initial_fluids.

	* root.h: Added "fluids" member to scm_root_state.
	* root.c: Include "fluids.h".  (scm_mark_root): Mark "fluids".
	(scm_make_root): Call scm_copy_fluids to make fluid bindings
 	unique for the new root when it has a parent.
	
	* smob.h: Include "libguile/print.h" to make scm_print_state
 	visible.

	* dynl.c (free_dynl_obj): New function to free the dynamic object
 	data. (dynl_smob): Use it.
	* dynl.c (scm_dynamic_link): Moved allocating of the memory for
 	the dynamic object data below the linking of the object to avoid
 	memory leak when the linking code throws an error.  Now the code
 	leaks a whole dynamically linked library when must_malloc throws,
 	but that should be much less likely.

Fri Jul 11 00:19:47 1997  Jim Blandy  <jimb@floss.red-bean.com>

	Changes to compile under gnu-win32, from Marcus Daniels: